<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aaddr.test03.shoppingTodoList">
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="147dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/todolistbackground" />

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/shopping"
        android:textSize="35dp"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/tv_dwCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_label"
        android:layout_marginStart="25dp"
        android:layout_marginTop="29dp"
        android:text="@string/shopping_category"
        android:textColor="@color/label_text_light"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="152dp" />

    <TextView
        android:id="@+id/tv_importance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_dwCategory"
        android:layout_alignTop="@+id/sp_importance"
        android:text="@string/importance"
        android:textColor="@color/label_text_light"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="189dp" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_alignStart="@+id/tv_importance"
        android:layout_centerVertical="true"
        android:text="@string/desc"
        android:textColor="@color/label_text_light"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="265dp" />

    <Spinner
        android:id="@+id/sp_dwCategory"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sp_importance"
        android:layout_alignTop="@+id/tv_dwCategory"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="228dp" />

    <Spinner
        android:id="@+id/sp_importance"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sp_dwCategory"
        android:layout_marginStart="17dp"
        android:layout_marginTop="19dp"
        android:layout_toEndOf="@+id/tv_dwCategory" />

    <EditText
        android:id="@+id/ed_desc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sp_importance"
        android:layout_alignTop="@+id/tv_desc"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="265dp"
        android:hint="@string/desc"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ed_desc"
        android:layout_below="@+id/ed_desc"
        android:layout_marginTop="26dp"
        android:background="@drawable/btn_submitbackground" />

    <Button
        android:id="@+id/btn_lan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView7"
        android:layout_toStartOf="@+id/ed_desc"
        android:text="@string/language" />

</RelativeLayout>
